# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py: Added
  with_key() method to Atom for creating a new atom of a different key with
  the same constraints.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added transform_virtuals() function to just that. Added
  testing code to show how it is used. Renamed TargetGraph to StateGraph.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added full support for OR-based dependencies. Still
  need to sort out virtuals and provide a public interface for TargetGraph.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> pym/ebuild.py:
  Do not check the digests of files except when unpacking/fetching #29333.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepall:
  Remove old unused aclocal code #81419.  Don't chmod +x files that are already 
  +x #81427.  Make sure all shared/static library pairs have proper linker 
  scripts in /usr/lib when appropriate #81420.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> 
  bin/ebuild-default-functions.sh:
  Allow people to pass files in $PWD to unpack via ./FILE syntax #24637.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/do{doc,info,man} 
  bin/prepall{docs,info,man} bin/prep{info,man}:
  Clean up and standardize the output.  Also allow for selecting of compression 
  method via new env vars PORTAGE_COMPRESS / PORTAGE_COMPRESS_FLAGS #9870.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepstrip bin/emake:
  Only echo the strip banner once per dir and don't try to pass strip args 